@@ -1,3 +1,7 @@
+2002-07-15  Andrew Cagney  <ac131313@redhat.com>
+
+	* dwarf2cfi.c: Replace __func__ with "?func?".
+
 2002-07-09  David O'Brien  <obrien@FreeBSD.org>
 
 	Merge from mainline:
